[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/SmallText.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/ChallengeDetails.gd" type="Script" id=2]

[node name="ChallengeDetails" type="Control"]
anchor_right = 0.293
anchor_bottom = 1.0
margin_right = -0.0400085
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20

[node name="Label_Name" type="Label" parent="VBoxContainer"]
margin_right = 375.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "Challenge Name"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 375.0
margin_bottom = 210.0
custom_constants/separation = 30

[node name="Label_Description" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 375.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "Challenge Description"
align = 1
autowrap = true

[node name="VBox_Reward" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 375.0
margin_bottom = 106.0

[node name="Label_RewardText" type="Label" parent="VBoxContainer/VBoxContainer/VBox_Reward"]
margin_right = 375.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "Reward:"
align = 1

[node name="Label_Reward" type="Label" parent="VBoxContainer/VBoxContainer/VBox_Reward"]
margin_top = 28.0
margin_right = 375.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Reward"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 375.0
margin_bottom = 166.0
alignment = 1

[node name="Button_Claim" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 250.0
margin_bottom = 30.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Claim"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/Button_Claim" to="." method="_on_Button_Claim_pressed"]
